challenge/week05/day33/yaml/pod-np-ingress-api-bff.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bff-policy
#  namespace: 
spec:
  podSelector:
    matchLabels:
      app: bff
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: api
    ports:
    - protocol: TCP
      port: 80
