challenge/week05/day33/yaml/pod-np-ingress-bff-backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-policy
#  namespace: 
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: bff
    ports:
    - protocol: TCP
      port: 80
