challenge/week05/day33/yaml/pod-np-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: middleware-policy
#  namespace: 
spec:
  podSelector:
    matchLabels:
      tier: middleware
  policyTypes:
  - Ingress
  ingress:
  - from:
    podSelector:
      matchLabels:
        tier: web
    namespaceSelector:
      matchLabels:
        name: web
    ports:
    - protocol: TCP
      port: 80
